--- a/index.html
+++ b/index.html
@@ -8,11 +8,40 @@
 </head>
 <body>
     <!-- HOME PAGE -->
-    <!-- TODO: Navbar here -->
+    <body>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="menu.html">Menu</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    <img id="banner" alt="Banner logo" src="./assets/images/banner.png">
+
     <!-- TODO: Banner Image here-->
     <main>
         <h1>H-Thai-ML</h1>
-        <!-- TODO: Home page code here-->
+        <H2>We'll format your meal times!</H2>
+        <div class="service">
+            <h3>Dine-In</h3>
+        </div>
+        <div class="service">
+            <h3>Take Out</h3>
+        </div>
+        <div class="service">
+            <h3>Delivery</h3>
+        </div>
+        <h2>Come out and join us for a well-structured meal!</h2>
+        <img src="assets/images/table-in-restaurant.jpg" alt="Table in Restaurant">
     </main>
 </body>
 </html>
